Create list and delete clusters
